Mon Jul  3 14:17:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/EndpointPolicy/EndpointPolicyTypeC.h:
          Fixed versioning macros

Mon Jul  3 14:07:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_valuebox/valuebox_ci.cpp:
          Fixed versioning macros

Mon Jul  3 13:06:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/ast/ast_decl.cpp:
          Const improvements

        * TAO_IDL/fe/fe_init.cpp:
        * TAO_IDL/util/utl_stack.cpp:
          Initialise pointer with 0

Mon Jul  3 11:41:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PI/ORBInitInfoA.h:
          Added this file, needed because other files can include the
          pidl file and this file isn't generated by the idl compiler
          because we don't use -GA when regenerating the pidl file

Mon Jul  3 11:15:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Sequence_Unit_Tests/Sequence_Unit_Tests.mpc:
          Temporarily disabled the array sequence ut, the mock_array
          isn't updated after all array refactoring and this needs
          more time then we have for the upcoming beta

Mon Jul  3 10:59:59 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/OBV/Any/OBV_Any.mpc:
        * tests/OBV/Any/client.cpp:

        * tests/OBV/Truncatable/OBV_Truncatable.mpc:
        * tests/OBV/Truncatable/TruncatableS_impl.cpp:
        * tests/OBV/Truncatable/client.cpp:

          Bug 2576 turned out to be invalid. There is already a mechanism
          present to address the problem I raised. I've updated the tests
          to work with the correct value extraction methods.

Mon Jul  3 12:00:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/Bug_2577_Regression.idl:
        * tests/IDL_Test/IDL_Test.mpc:
          Added regression for bug 2577, this is not fixed yet, but I had